tests/pairs/ill-typed/bad-pairs-3.stella
language core;
extend with #pairs;

fn swap(p : {Nat, Nat}) -> {Nat, Bool} {
  return {p.2, false}
}

fn main(x : Nat) -> Nat {
  return swap(swap({0, x})).2
}
